--- a/pig-dice.html
+++ b/pig-dice.html
@@ -12,9 +12,12 @@
   <body>
   <div class="container">
     <div class="jumbotron">
-      <h1>Pig-dice</h1>
+      <!-- <h1> Pig-dice</h1> -->
+      <center><img src="css/img/title.jpg" alt="photo of dice" width="800" height="300"></center>
     </div>
-    <div class="rules">
+    <!-- <h3 class="rules">RULES</h3> -->
+    <button type="button" class="rules">RULES</button>
+    <div id="rules" class="jumbotron" >
       <p>Pig is a simple dice game which in its basic form is playable with just a single die. You win by being the first player to score 100 or more points.</p>
       <p>Choose a player to go first. That player throws a die and scores as many points as the total shown on the die providing the die doesn’t roll a 1. The player may continue rolling and accumulating points (but risk rolling a 1) or end his turn.</p>
       <p>If the player rolls a 1 his turn is over, he loses all points he accumulated that turn, and he passes the die to the next player.</p>
@@ -35,6 +38,9 @@
       </div>
   <center><button type="submit" class="start">Start Game!</button><center>
     </form>
+    <div id="gameArea">
+
+
     <div class="row">
       <div class="col-sm-6">
         <!-- Enter name -->
@@ -43,7 +49,8 @@
           <h3>Dice Roll:</h3> <span id="dice-roll1"></span>
           <h3>Round Score:</h3> <span id="round-score1"></span>
           <h3>Total Score:</h3> <span id="score1"></span><br>
-          <button type="button" class="roll1">Roll</button>
+          <img src="css/img/logo.png" alt="photo of dice" width="80" height="80" class="roll1">
+          <!-- <button type="button" class="roll1">Roll</button> -->
           <button type="button" class="Hold1">Hold</button>
         </div>
       </div>
@@ -54,11 +61,13 @@
           <h3>Dice Roll:</h3> <span id="dice-roll2"></span>
           <h3>Round Score:</h3> <span id="round-score2"></span>
           <h3>Total Score:</h3> <span id="score2"></span><br>
-          <button type="button" class="roll2">Roll</button>
+          <img src="css/img/logo.png" alt="photo of dice" width="80" height="80" class="roll2">
+          <!-- <button type="button" class="roll2">Roll</button> -->
           <button type="button" class="Hold2">Hold</button>
         </div>
       </div>
     </div>
+   </div>
   </div>
   </body>
 </html>
