--- a/pig-dice.html
+++ b/pig-dice.html
@@ -29,41 +29,44 @@
       <div class="row">
         <div class="col-md-6">
           <label for="name1">Enter your name</label>
-          <input type="text" id="name1">
+          <input type="text" required id="name1">
         </div>
         <div class="col-md-6">
           <label for="name2">Enter your name</label>
-          <input type="text" id="name2">
+          <input type="text"  required id="name2">
         </div>
-      </div>
+      </div><br>
   <center><button type="submit" class="start">Start Game!</button><center>
     </form>
-    <div id="gameArea">
+    <div id="gameArea" class="jumbotron">
 
 
     <div class="row">
-      <div class="col-sm-6">
+      <div class="col-sm-6 hide" >
         <!-- Enter name -->
         <h3><span id="player1"></span> </h3>
+        <img src="css/img/player1.jpg" alt="photo of pig" width="210" height="240">
         <div class="display1">
-          <h3>Dice Roll:</h3> <span id="dice-roll1"></span>
-          <h3>Round Score:</h3> <span id="round-score1"></span>
-          <h3>Total Score:</h3> <span id="score1"></span><br>
-          <img src="css/img/logo.png" alt="photo of dice" width="80" height="80" class="roll1">
+          <h3>Dice Roll: <span id="dice-roll1"></span></h3>
+          <h3>Round Score: <span id="round-score1"></span></h3>
+          <h3>Total Score: <span id="score1"></span><br></h3>
+
+            <img src="css/img/logo.png" alt="photo of dice" width="80" height="80" class="roll1">
           <!-- <button type="button" class="roll1">Roll</button> -->
-          <button type="button" class="Hold1">Hold</button>
+          <button type="button" class="Hold1 btn-info">Hold</button>
         </div>
       </div>
       <div class="col-sm-6">
         <h3><span id="player2"></span> </h3>
-
+        <img src="css/img/player2.jpg" alt="photo of pig"  width="210" height="240">
         <div class="display2">
-          <h3>Dice Roll:</h3> <span id="dice-roll2"></span>
-          <h3>Round Score:</h3> <span id="round-score2"></span>
-          <h3>Total Score:</h3> <span id="score2"></span><br>
+          <h3>Dice Roll: <span id="dice-roll2"></span></h3>
+          <h3>Round Score: <span id="round-score2"></span></h3>
+          <h3>Total Score: <span id="score2"></span></h3><br>
+          <p>click dice to roll!</p>
           <img src="css/img/logo.png" alt="photo of dice" width="80" height="80" class="roll2">
           <!-- <button type="button" class="roll2">Roll</button> -->
-          <button type="button" class="Hold2">Hold</button>
+          <button type="button" class="Hold2 btn-info">Hold</button>
         </div>
       </div>
     </div>
