--- a/pig-dice.html
+++ b/pig-dice.html
@@ -42,7 +42,7 @@
 
 
     <div class="row">
-      <div class="col-sm-6 hide" >
+      <div class="col-sm-6 hide1" >
         <!-- Enter name -->
         <h3><span id="player1"></span> </h3>
         <img src="css/img/player1.jpg" alt="photo of pig" width="210" height="240">
@@ -51,12 +51,12 @@
           <h3>Round Score: <span id="round-score1"></span></h3>
           <h3>Total Score: <span id="score1"></span><br></h3>
 
-            <img src="css/img/logo.png" alt="photo of dice" width="80" height="80" class="roll1">
+            <img src="css/img/logo.png" alt="photo of dice" width="80" height="80" class="roll1" id="roll1">
           <!-- <button type="button" class="roll1">Roll</button> -->
           <button type="button" class="Hold1 btn-info">Hold</button>
         </div>
       </div>
-      <div class="col-sm-6">
+      <div class="col-sm-6 hide2">
         <h3><span id="player2"></span> </h3>
         <img src="css/img/player2.jpg" alt="photo of pig"  width="210" height="240">
         <div class="display2">
