--- a/pig-dice.html
+++ b/pig-dice.html
@@ -38,6 +38,11 @@
       </div><br>
   <center><button type="submit" class="start">Start Game!</button><center>
     </form>
+    <div id="winner">
+
+      <img src="css/img/winner.giv.gif" alt="photo">
+
+    </div>
     <div id="gameArea" class="jumbotron">
 
 
@@ -68,6 +73,7 @@
           <!-- <button type="button" class="roll2">Roll</button> -->
           <button type="button" class="Hold2 btn-info">Hold</button>
         </div>
+
       </div>
     </div>
    </div>
