--- a/pig-dice.html
+++ b/pig-dice.html
@@ -11,10 +11,13 @@
   </head>
   <body>
   <div class="container">
-    <div class="jumbotron">
-      <!-- <h1> Pig-dice</h1> -->
-      <center><img src="css/img/title.jpg" alt="photo of dice" width="800" height="300"></center>
+    <div id="banner">
+        <h1>Pig Dice</h1>
     </div>
+      <!-- <h1> Pig-dice</h1> -->
+      <!-- <center><img src="css/img/banner.jpg" alt="photo of dice" width="800" height="300"></center> -->
+
+
     <!-- <h3 class="rules">RULES</h3> -->
     <button type="button" class="rules">RULES</button>
     <div id="rules" class="jumbotron" >
@@ -43,7 +46,7 @@
       <img src="css/img/winner.giv.gif" alt="photo">
 
     </div>
-    <div id="gameArea" class="jumbotron">
+    <div id="gameArea">
 
 
     <div class="row">
@@ -55,7 +58,7 @@
           <h3>Dice Roll: <span id="dice-roll1"></span></h3>
           <h3>Round Score: <span id="round-score1"></span></h3>
           <h3>Total Score: <span id="score1"></span><br></h3>
-
+          <p>click dice to roll!</p>
             <img src="css/img/logo.png" alt="photo of dice" width="80" height="80" class="roll1" id="roll1">
           <!-- <button type="button" class="roll1">Roll</button> -->
           <button type="button" class="Hold1 btn-info">Hold</button>
