add fnction to display the name

--- a/pig-dice.html
+++ b/pig-dice.html
@@ -42,7 +42,7 @@
   <center><button type="submit" class="start">Start Game!</button><center>
     </form>
     <div id="winner">
-
+      <h2><span class="winnerName"></span> </h2>
       <img src="css/img/winner.giv.gif" alt="photo">
 
     </div>
